<resources>
    <string name="app_name">My Application</string>
    <string name="password_hint">password_hint</string>
    <string name="login_button">login_button</string>
    <string name="login_title">login_title</string>
    <string name="username_hint">username_hint</string>
    <string name="loading">loading</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>